--- a/public/assets/style-home.css
+++ b/public/assets/style-home.css
@@ -174,7 +174,10 @@ nav ul li a:hover:before {
     height: 100px;
     width: 240px;
     transition: all 0.3s ease;
-    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));
+     /*filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));*/
+    object-fit: contain;
+    border:none;
+    border-color: transparent;
 }
 
 .logo:hover img {
