--- a/public/assets/style-usuarios.css
+++ b/public/assets/style-usuarios.css
@@ -131,14 +131,18 @@ nav ul li a:hover:before {
     margin-bottom: 90px;
     text-align: center;
     margin-left: -30px;
+     
 }
 
 .logo img { /* ESTILOS BASE PARA DESKTOP */
     height: 100px;
     width: 240px;
     transition: all 0.3s ease;
-    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));
+    /*filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));*/
     object-fit: contain;
+    border:none;
+    border-color: transparent;
+   
 }
 
 .logo:hover img {
